# esp-idf-supervisor

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_mqtt.c  app_mqtt.h  display_font.h  display_service.c  display_service.h  ds18b20_temp.c  ds18b20_temp.h  dummy_temperature_service.c  dummy_temperature_service.h  ethernet_service.c  ethernet_service.h  ethernet_setup.c  ethernet_setup.h  ethernet_transport.c  ethernet_transport.h  main.c  mqtt_service.c  mqtt_service.h  network_service.c  network_service.h  network_transport.h  priorities.h  supervisor.c  supervisor.h  system.c  system.h
