idf_component_register(
    SRCS
        "main.c"
        "supervisor.c"
        "system.c"
        "network_service.c"
        "ethernet_transport.c"
        "ethernet_setup.c"
        "mqtt_service.c"
        "app_mqtt.c"
        "ds18b20_temp.c"
        "display_service.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_timer
        nvs_flash
        esp_eth
        esp_netif
        driver
        mqtt
        esp_lcd
    PRIV_REQUIRES
        espressif__onewire_bus
)
